--- a/style.css
+++ b/style.css
@@ -259,7 +259,7 @@ a.active {
 ==================================================*/
 
 #home {
-    background: url(../img/home-bg-2.jpg);
+    background: url(../home-bg-2.jpg);
     background-size: cover;
     height: 100vh;
 }
